<resources>
    <string name="app_name">WeatherForecast</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="date">Date:</string>
    <string name="average_temperature">Average temperature:</string>
    <string name="pressure">Pressure:</string>
    <string name="humidity">Humidity:</string>
    <string name="description">Description:</string>
    <string name="get_weather">Get Weather</string>
    <string name="search_city_name">Search city name</string>
    <string name="error_weather_not_found">Weathers not found</string>
    <string name="error_server">Oops, something went wrong</string>
    <string name="error_unexpected">An unexpected error has occurred</string>
    <string name="error_search_key_min_length">Search criteria should contain at least 3 characters</string>
    
    <string name="humidity_with_unit">%1$s %%</string>
    <string name="temperature_with_celsius">%1$d\u2103</string>
    <string name="temperature_with_fahrenheit">%1$d\u2109</string>
    <string name="ok">OK</string>
    <string name="cant_open_app">Can\'t open app</string>
    <string name="error_device_not_secure">For your secure, Weather Forecast can\'t be open on rooted phone</string>
</resources>